set home and about pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <p>About Us</p>
-    <%= link_to 'Home', welcome_home_path %>
+    <%= link_to 'Home', root_path %>
   </body>
 </html>
