--- a/app/views/myarticles/_form.html.erb
+++ b/app/views/myarticles/_form.html.erb
@@ -1,24 +1,32 @@
-<% if @myarticle.errors.any? %>
-<h2>The following errors prevented the article from being created</h2>
-  <ul>
-    <% @myarticle.errors.full_messages.each do |msg| %>
-    <li>
-      <%= msg %>
-    </li>
+<%= render 'shared/errors', obj: @myarticle %>
+
+<div class="row">
+  <div class="col-xs-12">
+    <%= form_for(@myarticle, :html =>{class: "form-horizontal", role: "form"}) do |f| %>
+    <div class="form-group">
+      <div class="col-sm-2 control-label">
+        <%= f.label :title %>
+      </div>
+      <div class="col-sm-8">
+        <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true%>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-2 control-label">
+        <%= f.label :description %>
+      </div>
+      <div class="col-sm-8">
+        <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Description of article" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit class: 'btn btn-primary btn-lg'%>
+      </div>
+    </div>
     <% end %>
-  </ul>
-<% end %>
-<%= form_for @myarticle do |f| %>
-  <p>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
-<%= link_to "Back to articles", myarticles_path %>
+    <div class="col-xs-4 col-xs-offset-4">
+      [<%= link_to "Cancel request and Back to articles", myarticles_path %>]
+    </div>
+  </div>
+</div>
