--- a/app/views/myarticles/index.html.erb
+++ b/app/views/myarticles/index.html.erb
@@ -1,25 +1,22 @@
-<h1>Articles List</h1>
-<%= link_to "create new article", new_myarticle_path %>
-<ul>
-  <% @all_articles.each do |article| %>
-  <li>
-    <%= article.inspect %>
-  </li>
-  <% end %>
-</ul>
+<h1 align="center">Articles List</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-  <% @all_articles.each do |article| %>
-  <tr>
-    <td><%= article.title %></td>
-    <td><%= article.description %></td>
-    <td><%= link_to "Edit", edit_myarticle_path(article) %></td>
-    <td><%= link_to "Show", myarticle_path(article) %></td>
-    <td><%= link_to "Delete", myarticle_path(article), method: :delete, data: {confirm: "Are you Sure?"} %></td>
-  </tr>
-  <% end %>
-</table>
+<% @all_articles.each do |article| %>
+<div class="row">
+  <div class="col-xs-8 col-xs-offset-2">
+    <div class="well well-lg">
+      <div class="article-title">
+        <%= link_to article.title, myarticle_path(article) %>
+      </div>
+      <div class="article-body">
+        <%= truncate(article.description, length: 100) %>
+      </div>
+      <div class="article-actions">
+        <%= link_to "Edit", edit_myarticle_path(article), class: "btn btn-xs btn-primary" %>
+        <%= link_to "Delete", myarticle_path(article),method: :delete,
+                              data:{confirm: "Are you sure you want to delete the article?"},
+                              class: "btn btn-xs btn-danger" %>
+      </div>
+    </div>
+  </div>
+</div>
+<% end %>
