--- a/app/views/myarticles/show.html.erb
+++ b/app/views/myarticles/show.html.erb
@@ -1,10 +1,15 @@
-<h1>Showing selected article</h1>
-<p>
-  Title: <%= @myarticle.title %>
-</p>
-<p>
-  Description: <%= @myarticle.description %>
-</p>
-
-<%= link_to "Edit", edit_myarticle_path(@myarticle) %><br>
-<%= link_to "Back to articles", myarticles_path %>
+<h2 align="center">Title: <%= @myarticle.title %></h2>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="center description">
+    <strong>Description:</strong>
+  </h4>
+  <%=simple_format(@myarticle.description)  %>
+  <div class="article-actions">
+    <%= link_to "Edit", edit_myarticle_path(@myarticle), class: "btn btn-xs btn-primary" %>
+    <%= link_to "Delete", myarticle_path(@myarticle),
+                          method: :delete,
+                          data:{confirm: "Are you sure you want to delete the article?"},
+                          class: "btn btn-xs btn-danger" %>
+    <%= link_to "View all articles", myarticles_path, class: "btn btn-xs btn-success" %>
+  </div>
+</div>
