--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -32,6 +32,11 @@ $navbar-default-bg:#7ea7d6;
   text-align: center;
 }
 
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  // margin-top: 15px;
+}
+
 .article-actions {
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
@@ -48,7 +53,7 @@ $navbar-default-bg:#7ea7d6;
 .article-body {
   border-top: 1px solid #eaeaea;
   padding-top: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 2px;
 }
 
 footer {
