--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,6 +56,10 @@ $navbar-default-bg:#7ea7d6;
   padding-bottom: 2px;
 }
 
+.listing {
+  list-style: none;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
