--- a/app/views/myarticles/show.html.erb
+++ b/app/views/myarticles/show.html.erb
@@ -1,5 +1,19 @@
 <h2 align="center">Title: <%= @myarticle.title %></h2>
 <div class="well col-xs-8 col-xs-offset-2">
+  <% if @myarticle.myuser %>
+    <ul class="listing">
+      <div class="row center">
+        <div class="well col-md-4 col-md-offset-4">
+          <li>Created By:</li>
+          <li><%= link_to(gravatar_for(@myarticle.myuser), myuser_path(@myarticle.myuser)) if @myarticle.myuser %></li>
+          <li class="article-title">
+            <%= link_to(@myarticle.myuser.username, myuser_path(@myarticle.myuser)) if @myarticle.myuser %>
+          </li>
+          <li><small><%= pluralize(@myarticle.myuser.myarticles.count,"article") if @myarticle.myuser and @myarticle.myuser.myarticles %></small></li>
+        </div>
+      </div>
+    </ul>
+  <% end %>
   <h4 class="center description">
     <strong>Description:</strong>
   </h4>
